--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,8 @@
     <artifactId>luna</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <modules>
+        <module>data-service</module>
+    </modules>
 
 </project>
