--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>data-service</module>
+        <module>hello-world</module>
     </modules>
 
 </project>
