--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,11 @@
     <groupId>con.lunaticj</groupId>
     <artifactId>luna</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <modules>
         <module>eureka-server</module>
+        <module>hello-world</module>
     </modules>
 
 </project>
