--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>eureka-server</module>
         <module>hello-world</module>
+        <module>simple-01</module>
     </modules>
 
 </project>
