implement todolist with ppstgres

--- a/vertex-todolist/pom.xml
+++ b/vertex-todolist/pom.xml
@@ -54,7 +54,7 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-redis-client</artifactId>
+      <artifactId>vertx-pg-client</artifactId>
     </dependency>
 
     <dependency>
