--- a/vertex-mnemosyne/pom.xml
+++ b/vertex-mnemosyne/pom.xml
@@ -39,19 +39,10 @@
       <groupId>io.vertx</groupId>
       <artifactId>vertx-web</artifactId>
     </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-web-templ-freemarker</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.github.rjeschke</groupId>
-      <artifactId>txtmark</artifactId>
-      <version>0.13</version>
-    </dependency>
 
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-redis-client</artifactId>
+      <artifactId>vertx-mongo-client</artifactId>
     </dependency>
 
     <dependency>
